<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">UFJF</string>
    <string name="news">Notícias</string>
    <string name="questionarios">Pesquisas</string>
    <string name="settings">Preferências</string>
    <string name="answer_hint">Resposta</string>
    <string name="question_scale_label">Resposta: %d</string>
    <string name="open_content_drawer">Abrir menu de navegação</string>
    <string name="close_content_drawer">Fechar menu de navegação</string>
    <string name="sign_in">Entrar</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="password">Senha</string>
    <string name="wrong_credentials">E-mail ou senha incorretos</string>
    <string name="success_signin">Sucesso</string>
    <string name="submit">Enviar</string>
    <string name="all_questions_answered">Você respondeu a todas as perguntas.</string>
    <string name="logout">Sair</string>
    <string name="not_all_questions_answered">Você deixou perguntas em branco.</string>
    <string name="answer_sent">Respostas enviadas</string>
    <string name="answer_not_sent">Não foi possível enviar. Tente mais tarde.</string>
    <string name="calendar">Calendário</string>
    <string name="create_reminder">Criar lembrete</string>
    <string name="date_to_date" translatable="false">%1$d\na\n%2$d</string>
    <string name="see_full_article">Ver notícia completa</string>
    <string name="open_in_browser">Abrir no navegador</string>
    <string name="loading_">Carregando…</string>
    <string name="information">Informações</string>
    <string name="enviar_email_">Enviar e-mail…</string>
    <string name="sem_app_email">Não há um app de e-mails instalado.</string>
    <string name="pro_reitorias">Pró-Reitorias</string>
    <string name="coordenacoes">Coordenações</string>
    <string name="unidades">Unidades</string>
    <string name="outros">Outros</string>
    <string name="proxima">Próxima</string>
    <string name="anterior">Anterior</string>

</resources>
