<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/navigation_drawer_width"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:fitsSystemWindows="true"
    android:background="@android:color/white"
    android:scrollbars="none"
    tools:context=".ui.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/drawer_news"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touchable"
            android:paddingLeft="@dimen/margin_screen"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:onClick="selectNavigationDrawerItem"
            android:background="?android:selectableItemBackground">

            <ImageView
                android:layout_width="@dimen/touchable"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/margin_view"
                android:paddingBottom="@dimen/margin_view"
                android:src="@drawable/ic_assignment_grey600_24dp"
                android:scaleType="fitStart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_view"
                style="@style/DrawerText"
                android:text="@string/news" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/drawer_surveys"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touchable"
            android:paddingLeft="@dimen/margin_screen"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_below="@id/drawer_news"
            android:onClick="selectNavigationDrawerItem"
            android:background="?android:selectableItemBackground">

            <ImageView
                android:layout_width="@dimen/touchable"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/margin_view"
                android:paddingBottom="@dimen/margin_view"
                android:src="@drawable/ic_assignment_grey600_24dp"
                android:scaleType="fitStart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_view"
                style="@style/DrawerText"
                android:text="@string/questionarios" />
        </LinearLayout>

        <View
            android:id="@+id/separador"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/drawer_surveys"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/gray_stroke" />

        <TextView
            android:id="@+id/drawer_settings"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touchable"
            android:layout_below="@id/separador"
            android:paddingLeft="@dimen/margin_screen"
            style="@style/DrawerText"
            android:text="@string/settings"
            android:clickable="true"
            android:onClick="selectNavigationDrawerItem"
            android:background="?android:selectableItemBackground" />
    </RelativeLayout>

</ScrollView>